# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
    "drake_cc_test",
)
load(
    "@drake//tools/skylark:drake_proto.bzl",
    "drake_cc_proto_library",
)
load("//tools/skylark:test_tags.bzl", "gurobi_test_tags")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_library(
  name = "rational_forward_kinematics",
  srcs = ["rational_forward_kinematics.cc"],
  hdrs = ["rational_forward_kinematics.h"],
  deps = [
      "//multibody/multibody_tree",
      "//common:symbolic",
  ],
)

drake_cc_googletest(
    name = "rational_forward_kinematics_test",
    deps = [
        ":rational_forward_kinematics",
        "//multibody/benchmarks/kuka_iiwa_robot",
        "//common:find_resource",
        "//common/test_utilities:eigen_matrix_compare",
        "//common/test_utilities:symbolic_test_util",
        "//multibody/multibody_tree/multibody_plant",
        "//multibody/multibody_tree/parsing:multibody_plant_sdf_parser",
    ],
    data = [
        "//manipulation/models/iiwa_description:models",
    ],
)

add_lint_tests()
