# -*- python -*-

load(
    "//tools:drake.bzl",
    # "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_binary",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_library(
    name = "symbolic_render",
    srcs = ["symbolic_render.cc"],
    hdrs = ["symbolic_render.h"],
    deps = [
        "//drake/common:essential",
        "//drake/common:symbolic",
        "//drake/systems/sensors:image",
    ],
)

drake_cc_binary(
    name = "dreal_render",
    srcs = [
        "dreal_render.cc",
    ],
    deps = [
        ":symbolic_render",
        "//drake/solvers:dreal_solver",
    ],
)

add_lint_tests()
