load("@drake//tools/lint:python_lint.bzl", "python_lint")
load(
    "@drake//tools/install:install.bzl",
    "install",
)

licenses(["notice"])  # MIT / BSD-3

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "inja",
    hdrs = glob([
        "single_include/inja/inja.hpp",
    ]),
    includes = ["single_include"],
    deps = ["@json"],
)

install(
    name = "install",
    docs = ["LICENSE"],
)
